Allow players to choose Kaleh or Nym in the tutorial
Could be separated in to two branches, one making the strings use
"$student_name" to allow any character, and one for adding Kaleh
and Nym to the selectable characters.

Inspired by LienRag's work on black protagonists for HttT.
https://r.wesnoth.org/t48990

--- a/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
+++ b/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
@@ -99,6 +99,18 @@
         {VARIABLE low_hp_unit_message_female[1].value ( _ "female^One lucky attack by an Orcish Grunt, and I’m done for!")}
         {VARIABLE low_hp_unit_message_female[2].value ( _ "female^I could make use of some healing in a village.")}
         {VARIABLE low_hp_unit_message_female[3].value ( _ "female^I had better retreat, before I get caught out with such low health!")}
+        [store_unit]
+            [filter]
+                id=student
+            [/filter]
+            variable=student_store
+        [/store_unit]
+        {VARIABLE student_name $student_store[0].name}
+        {CLEAR_VARIABLE student_store}
+        [modify_side]
+            side=1
+            side_name=$student_name
+        [/modify_side]
 
         [objectives]
             side=1
@@ -108,25 +120,8 @@
             [/objective]
 
             [objective]
-                description= _ "Death of Konrad"
+                description= _ "Death of $student_name"
                 condition=lose
-                [show_if]
-                    [have_unit]
-                        id=student
-                        gender=male
-                    [/have_unit]
-                [/show_if]
-            [/objective]
-
-            [objective]
-                description= _ "Death of Li’sar"
-                condition=lose
-                [show_if]
-                    [have_unit]
-                        id=student
-                        gender=female
-                    [/have_unit]
-                [/show_if]
             [/objective]
 
             [objective]
@@ -136,19 +131,6 @@
 
             {TURNS_RUN_OUT}
         [/objectives]
-
-        [if]
-            [have_unit]
-                canrecruit=yes
-                gender=female
-            [/have_unit]
-            [then]
-                [modify_side]
-                    side=1
-                    side_name=_"Li’sar"
-                [/modify_side]
-            [/then]
-        [/if]
 
         [disallow_end_turn][/disallow_end_turn]
     [/event]
@@ -173,12 +155,12 @@
         {GENDER (
             [message]
                 speaker=Galdrad
-                message= _ "This is no game, Konrad! Orcs have encamped across the river. This is elven country; they are fools to enter here. We Elves are fast and hard to hit in forests. You must defeat their leader so they never threaten us again. I will advise you."
+                message= _ "This is no game, $student_name! Orcs have encamped across the river. This is elven country; they are fools to enter here. We Elves are fast and hard to hit in forests. You must defeat their leader so they never threaten us again. I will advise you."
             [/message]
         ) (
             [message]
                 speaker=Galdrad
-                message= _ "This is no game, Li’sar! Orcs have encamped across the river. This is elven country; they are fools to enter here. We Elves are fast and hard to hit in forests. You must defeat their leader so they never threaten us again. I will advise you."
+                message= _ "female^This is no game, $student_name! Orcs have encamped across the river. This is elven country; they are fools to enter here. We Elves are fast and hard to hit in forests. You must defeat their leader so they never threaten us again. I will advise you."
             [/message]
         )}
 
@@ -199,20 +181,20 @@
         [message]
             speaker=student
             message= _ "Let’s go! Attack!"
-            # po: The "us" in "let's" refers to Galdrad and Li'sar.
+            # po: The "us" in "let's" refers to Galdrad and Li'sar or Nym.
             female_message= _ "female^Let’s go! Attack!"
         [/message]
 
         {GENDER (
             [message]
                 speaker=Galdrad
-                # po: Addressing Konrad
+                # po: Addressing Konrad or Kaleh
                 message= _ "Hang on! You need to gather your forces. Or do you intend to fight the orcs single-handedly?"
             [/message]
         ) (
             [message]
                 speaker=Galdrad
-                # po: Addressing Li'sar
+                # po: Addressing Li'sar or Nym
                 message= _ "female^Hang on! You need to gather your forces. Or do you intend to fight the orcs single-handedly?"
             [/message]
         )}
@@ -449,12 +431,12 @@ A full list of abilities and weapons specials, along with traits, may be found i
         {GENDER (
             [message]
                 speaker=Galdrad
-                message= _ "You’ve learned well, Konrad. It is indeed a good idea to keep your leader safe and protected and in range of your keep early in the game. The tide of battle can turn quickly, and you don’t want to find yourself cut off from recruiting reinforcements."
+                message= _ "You’ve learned well, $student_name. It is indeed a good idea to keep your leader safe and protected and in range of your keep early in the game. The tide of battle can turn quickly, and you don’t want to find yourself cut off from recruiting reinforcements."
             [/message]
         ) (
             [message]
                 speaker=Galdrad
-                message= _ "You’ve learned well, Li’sar. It is indeed a good idea to keep your leader safe and protected and in range of your keep early in the game. The tide of battle can turn quickly, and you don’t want to find yourself cut off from recruiting reinforcements."
+                message= _ "female^You’ve learned well, $student_name. It is indeed a good idea to keep your leader safe and protected and in range of your keep early in the game. The tide of battle can turn quickly, and you don’t want to find yourself cut off from recruiting reinforcements."
             [/message]
         )}
     [/event]
@@ -474,8 +456,9 @@ A full list of abilities and weapons specials, along with traits, may be found i
         # Explain Zone of Control
         [message]
             speaker=student
+            # po: "we" refers to Kaleh or Konrad, Galdrad, and the mixed-gender troops
             message= _ "Can’t we just move around the orcs?"
-            # po: "we" refers to Li'sar, Galdrad, and the mixed-gender troops
+            # po: "we" refers to Li'sar or Nym, Galdrad, and the mixed-gender troops
             female_message= _ "female^Can’t we just move around the orcs?"
         [/message]
 
@@ -1136,9 +1119,9 @@ A full list of abilities and weapons specials, along with traits, may be found i
 
         [message]
             speaker=Galdrad
-            message= _ "You have beaten the orcs! You may want to try one of the novice-level campaigns next, such as <i>A Tale of Two Brothers</i>, <i>An Orcish Incursion</i>, or <i>The South Guard</i>. Konrad, Li’sar and Delfador are characters from <i>Heir to the Throne</i>. You can also refer to the in-game help browser if you ever need to refresh your memory on gameplay mechanics."
+            message= _ "You have beaten the orcs! You may want to try one of the novice-level campaigns next, such as <i>A Tale of Two Brothers</i>, <i>An Orcish Incursion</i>, or <i>The South Guard</i>. Konrad, Li’sar and Delfador are characters from <i>Heir to the Throne</i>. Kaleh and Nym are from an expert level campaign, it's better to get more experience before playing their story. You can also refer to the in-game help browser if you ever need to refresh your memory on gameplay mechanics."
         [/message]
 
-        {CLEAR_VARIABLE low_hp_unit_message,lhpu_msg_i}
+        {CLEAR_VARIABLE low_hp_unit_message,lhpu_msg_i,student_name}
     [/event]
 [/tutorial]
