--- a/data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg
+++ b/data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg
@@ -142,7 +142,7 @@
             speaker=narrator
             caption= _ "Welcome to Wesnoth!"
             image=wesnoth-icon.png
-            message= _ "This is a two-part tutorial intended for people who are new to the game. Part 1 will teach you the basics about movement, attacking, healing, and recruiting. Firstly, you’ll choose a hero (both heroes play the same)." +
+            message= _ "This is a two-part tutorial intended for people who are new to the game. Part 1 will teach you the basics about movement, attacking, healing, and recruiting. Firstly, you’ll choose a hero (all heroes play the same in this tutorial)." +
             {CONTINUE_MSG}
         [/message]
 
@@ -155,7 +155,8 @@
                 speaker=narrator
                 caption= _ "Welcome to Wesnoth!"
                 image=wesnoth-icon.png
-                message= _ "For this tutorial, you are playing Konrad. You are standing on the keep, and your mentor Delfador is on the east side of the river. You can move the mouse over a unit to see a summary of its abilities and stats on the right of the screen." +
+                # po: student_name is Konrad or Kaleh
+                message= _ "For this tutorial, you are playing $student_name. You are standing on the keep, and your mentor Delfador is on the east side of the river. You can move the mouse over a unit to see a summary of its abilities and stats on the right of the screen." +
                     {CONTINUE_MSG}
             [/message]
         ) (
@@ -163,15 +164,16 @@
                 speaker=narrator
                 caption= _ "Welcome to Wesnoth!"
                 image=wesnoth-icon.png
-                message= _ "For this tutorial, you are playing Li’sar. You are standing on the keep, and your mentor Delfador is on the east side of the river. You can move the mouse over a unit to see a summary of its abilities and stats on the right of the screen." +
+                # po: student_name is Li'sar or Nym
+                message= _ "female^For this tutorial, you are playing $student_name. You are standing on the keep, and your mentor Delfador is on the east side of the river. You can move the mouse over a unit to see a summary of its abilities and stats on the right of the screen." +
                     {CONTINUE_MSG}
             [/message]
         )}
 
         {GENDER (
-            {PRINT ( _ "Click on Konrad")}
+            {PRINT ( _ "Click on $student_name")}
         ) (
-            {PRINT ( _ "Click on Li’sar")}
+            {PRINT ( _ "female^Click on $student_name")}
         )}
 
         # For undo warning always keep a list of target hexes in target_loc
@@ -356,7 +358,7 @@
                 speaker=narrator
                 caption= _ "Movement"
                 image=wesnoth-icon.png
-                message= _ "When you hover over or select a unit, in this case Konrad, the places he can move to are highlighted. All units have a certain number of <i>movement points</i>, which dictate how many hexes that unit can move per turn. Normally, moving one hex on flat terrain uses one movement point. To move, simply click on Konrad and then your destination. (You can press <b>u</b> to undo a move if you move to the wrong place.)" +
+                message= _ "When you hover over or select a unit, in this case $student_name, the places he can move to are highlighted. All units have a certain number of <i>movement points</i>, which dictate how many hexes that unit can move per turn. Normally, moving one hex on flat terrain uses one movement point. To move, simply click on $student_name and then your destination. (You can press <b>u</b> to undo a move if you move to the wrong place.)" +
                     {CONTINUE_MSG}
             [/message]
         ) (
@@ -364,7 +366,7 @@
                 speaker=narrator
                 caption= _ "Movement"
                 image=wesnoth-icon.png
-                message= _ "When you hover over or select a unit, in this case Li’sar, the places she can move to are highlighted. All units have a certain number of <i>movement points</i>, which dictate how many hexes that unit can move per turn. Normally, moving one hex on flat terrain uses one movement point. To move, simply click on Li’sar and then your destination. (You can press <b>u</b> to undo a move if you move to the wrong place.)" +
+                message= _ "When you hover over or select a unit, in this case $student_name, the places she can move to are highlighted. All units have a certain number of <i>movement points</i>, which dictate how many hexes that unit can move per turn. Normally, moving one hex on flat terrain uses one movement point. To move, simply click on $student_name and then your destination. (You can press <b>u</b> to undo a move if you move to the wrong place.)" +
                     {CONTINUE_MSG}
             [/message]
         )}
@@ -375,9 +377,9 @@
         [/select_unit]
 
         {GENDER (
-            {PRINT ( _ "Move Konrad next to Delfador")}
+            {PRINT ( _ "Move $student_name next to Delfador")}
         ) (
-            {PRINT ( _ "Move Li’sar next to Delfador")}
+            {PRINT ( _ "female^Move $student_name next to Delfador")}
         )}
     [/event]
 
@@ -509,14 +511,14 @@
                 speaker=narrator
                 caption= _"Attacking"
                 image=wesnoth-icon.png
-                message= _ "To attack the quintain, first select the attacker (Konrad), then the target (the quintain). You will see an attack description. Click <b>Attack</b> when you’re ready."
+                message= _ "To attack the quintain, first select the attacker ($student_name), then the target (the quintain). You will see an attack description. Click <b>Attack</b> when you’re ready."
             [/message]
         ) (
             [message]
                 speaker=narrator
                 caption= _"Attacking"
                 image=wesnoth-icon.png
-                message= _"To attack the quintain, first select the attacker (Li’sar), then the target (the quintain). You will see an attack description. Click <b>Attack</b> when you’re ready."
+                message= _"female^To attack the quintain, first select the attacker ($student_name), then the target (the quintain). You will see an attack description. Click <b>Attack</b> when you’re ready."
             [/message]
         )}
     [/event]
@@ -555,14 +557,14 @@
                 speaker=narrator
                 caption= _ "Crowns"
                 image=wesnoth-icon.png
-                message= _ "The tiny golden crown above your leader (Konrad) indicates he is a side leader. In most scenarios, you will lose if your leader is killed. Be sure to keep him safe!"
+                message= _ "The tiny golden crown above your leader ($student_name) indicates he is a side leader. In most scenarios, you will lose if your leader is killed. Be sure to keep him safe!"
             [/message]
         ) (
             [message]
                 speaker=narrator
                 caption= _ "Crowns"
                 image=wesnoth-icon.png
-                message= _ "The tiny golden crown above your leader (Li’sar) indicates she is a side leader. In most scenarios, you will lose if your leader is killed. Be sure to keep her safe!"
+                message= _ "The tiny golden crown above your leader ($student_name) indicates she is a side leader. In most scenarios, you will lose if your leader is killed. Be sure to keep her safe!"
             [/message]
         )}
 
@@ -654,9 +656,9 @@
         [/store_villages]
 
         {GENDER (
-            {PRINT ( _ "Move Konrad to a nearby village")}
+            {PRINT ( _ "Move $student_name to a nearby village")}
         ) (
-            {PRINT ( _ "Move Li’sar to a nearby village")}
+            {PRINT ( _ "female^Move $student_name to a nearby village")}
         )}
 
         [event]
@@ -728,9 +730,9 @@
         [/store_locations]
 
         {GENDER (
-            {PRINT ( _ "Move Konrad to the keep")}
+            {PRINT ( _ "Move $student_name to the keep")}
         ) (
-            {PRINT ( _ "Move Li’sar to the keep")}
+            {PRINT ( _ "female^Move $student_name to the keep")}
         )}
 
         [event]
@@ -1068,12 +1070,12 @@
         {GENDER (
             [message]
                 speaker=Delfador
-                message= _ "Now, Konrad, I will leave you with more dummies to practice on! After that, we have real work to do..."
+                message= _ "Now, $student_name, I will leave you with more dummies to practice on! After that, we have real work to do..."
             [/message]
         ) (
             [message]
                 speaker=Delfador
-                message= _ "Now, Li’sar, I will leave you with more dummies to practice on! After that, we have real work to do..."
+                message= _ "female^Now, $student_name, I will leave you with more dummies to practice on! After that, we have real work to do..."
             [/message]
         )}
 
@@ -1181,6 +1183,7 @@
             image=wesnoth-icon.png
             message= _ "After your victory notice, the map will be grayed out to indicate that the scenario is over; this is called <i>linger mode</i>. You will still be able to examine the final positions and state of your troops and any surviving enemies. When you’re finished, click the <b>End Scenario</b> button to go on to the next scenario in the campaign."
         [/message]
+        {CLEAR_VARIABLE student_name}
     [/event]
 
     [event]
