--- a/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
@@ -13,10 +13,10 @@
     {campaigns/The_South_Guard/utils/sg_deaths.cfg}
     {campaigns/The_South_Guard/utils/sg_help.cfg}
 
-    {DEFAULT_SCHEDULE}
+    {DEFAULT_SCHEDULE_MORNING}
 
     victory_when_enemies_defeated=no
-    {TURNS 40 32 24}
+    {TURNS 24 20 16}
 
     # Scenario Introduction - Summer
 
@@ -39,14 +39,14 @@
         controller=human
         {CUSTOM_SG_FLAG}
 
-        {GOLD 120 100 80}
-        {INCOME 4 1 0}
+        {GOLD 70 60 50}
+        {INCOME 4 2 0}
 
         canrecruit=yes
         recruit=Peasant
     [/side] # wmllint: validate-on
 
-    {STARTING_VILLAGES 1 4}
+    {STARTING_VILLAGES 1 5}
 
     # The Bandit Armies
 
@@ -60,7 +60,8 @@
         user_team_name=_"Bandits"
         controller=ai
 
-        {GOLD 40 70 90}
+        {GOLD 20 25 30}
+        {INCOME -2 0 2}
 
         canrecruit=yes
 #ifdef EASY
@@ -88,10 +89,10 @@
         {FLAG_VARIANT6 ragged}
     [/side]
 
-    {STARTING_VILLAGES 2 14}
+    {STARTING_VILLAGES 2 9}
 
     [label]
-        x,y=13,10
+        x,y=9,10
         text= _ "The River Fort"
     [/label]
 
@@ -153,20 +154,11 @@
 
         # Add a useful village on 'trivial' difficulty'.
 #ifdef EASY
-        {MODIFY_TERRAIN Gg^Vh 13 23}
+        {MODIFY_TERRAIN Gg^Vh 10 18}
         [capture_village]
             side=2
-            x,y=13,23
+            x,y=10,18
         [/capture_village]
-#endif
-
-        # Modify the size of the keep of the enemy on 'simple' and 'easy' difficulties.
-#ifdef NORMAL
-        {MODIFY_TERRAIN Ce 20 22}
-#endif
-#ifdef HARD
-        {MODIFY_TERRAIN Ce 20 22}
-        {MODIFY_TERRAIN Ce 19 24}
 #endif
     [/event]
 
@@ -181,19 +173,19 @@
         [/message]
 
         [move_unit_fake]
-            {QUANTITY type Pikeman Spearman Peasant}
+            {QUANTITY type Pikeman Spearman Spearman}
             side=1
-            x=18,18,18,19
-            y=7,6,5,5
+            x=13,13,13,14
+            y=8,7,6,5
         [/move_unit_fake]
 
         [unit]
-            {QUANTITY type Pikeman Spearman Peasant}
+            {QUANTITY type Pikeman Spearman Spearman}
             id=Moreth
             name= _ "Moreth"
             unrenamable=yes
             side=1
-            x,y=19,5
+            x,y=14,5
             [modifications]
                 {TRAIT_LOYAL}
                 {TRAIT_RESILIENT}
@@ -227,7 +219,7 @@
             message= _ "Then we must head to the river fort! Sir Gerrick is guarding the armory there!"
         [/message]
 
-        {HIGHLIGHT_IMAGE 13 10 items/gohere.png ()}
+        {HIGHLIGHT_IMAGE 9 10 items/gohere.png ()}
 
 #ifdef EASY
         [message]
@@ -250,11 +242,11 @@
 
         [filter]
             side=1
-            x,y=13,10
+            x,y=9,10
         [/filter]
 
         [remove_item]
-            x,y=13,10
+            x,y=9,10
         [/remove_item]
 
         [unit]
@@ -265,7 +257,7 @@
             unrenamable=yes
             profile=portraits/sir-gerrick.png
             {IS_HERO}
-            x,y=14,9
+            x,y=10,9
             [modifications]
                 {TRAIT_LOYAL}
                 {TRAIT_RESILIENT}
@@ -322,12 +314,12 @@
                 [if]
                     [not]
                         [have_unit]
-                            x,y=20,4
+                            x,y=15,5
                             id=Deoran
                         [/have_unit]
                     [/not]
                     [then]
-                        {HIGHLIGHT_IMAGE 20 4 items/gohere.png ()}
+                        {HIGHLIGHT_IMAGE 15 5 items/gohere.png ()}
 
                         [message]
                             speaker=narrator
@@ -338,7 +330,7 @@
                         [event]
                             name=moveto
                             [filter]
-                                x,y=20,4
+                                x,y=15,5
                                 id=Deoran
                             [/filter]
 
@@ -370,11 +362,11 @@
         name=encamped
 
         [remove_item]
-            x,y=20,4
+            x,y=15,5
         [/remove_item]
 
         [scroll_to]
-            x,y=20,4
+            x,y=15,5
         [/scroll_to]
 
         [message]
@@ -400,65 +392,13 @@
     [/event]
 #endif
 
-    # Dusk - Sir Gerrick suggests that you should hold the north banks of the river.
-
-#ifdef EASY
-    [event]
-        name=turn 4
-
-        [if]
-            [have_unit]
-                id=Sir Gerrick
-            [/have_unit]
-            [then]
-                [message]
-                    speaker=Sir Gerrick
-                    message= _ "Bandits are most dangerous at night, Sir Deoran. Let us hold the north bank of the river until dawn and press our attack in the morning!"
-                [/message]
-
-                [message]
-                    speaker=narrator
-                    image=misc/time-schedules/default/schedule-firstwatch.png
-                    message= _ "All of your units are <i>lawful</i>. This means that they receive a combat bonus during the day and a penalty at night. Urza Mathin’s units are all <i>chaotic</i>, which means that they receive a bonus at night and a penalty during the day. You will be much more effective fighting during the day."
-                [/message]
-            [/then]
-        [/if]
-    [/event]
-#endif
-
-    # Dawn - Sir Gerrick suggests that you should attack now!
-
-#ifdef EASY
-    [event]
-        name=turn 7
-
-        [if]
-            [have_unit]
-                id=Sir Gerrick
-            [/have_unit]
-            [then]
-                [message]
-                    speaker=Sir Gerrick
-                    message= _ "The dawn breaks — now is the time for us to attack and drive these bandits from our lands. To me, men of the South Guard!"
-                [/message]
-
-                [message]
-                    speaker=narrator
-                    image=misc/time-schedules/default/schedule-dawn.png
-                    message= _ "During the day, your units will deal more damage and the bandits will deal less. The more of Urza Mathin's troops you can defeat during the day, the better."
-                [/message]
-            [/then]
-        [/if]
-    [/event]
-#endif
-
     # Mermen - You find mermen who will become allies and protect your waterways.
 
     [event]
         name=moveto
         [filter]
             side=1
-            x,y=6,10
+            x,y=4,10
         [/filter]
         [unit]
             side=1
@@ -477,7 +417,7 @@
                 {TRAIT_LOYAL}
                 {TRAIT_INTELLIGENT}
             [/modifications]
-            x,y=7,11
+            x,y=5,11
             {IS_LOYAL}
         [/unit]
         [unit]
@@ -526,13 +466,80 @@
         {VARIABLE has_mermen "yes"}
     [/event]
 
+    # Activate side 2 a little late so they don't send everything at you before dawn breaks
+
+    [event]
+        name=turn 4
+
+        [gold]
+            side=2
+            amount={ON_DIFFICULTY 30 35 40}
+        [/gold]
+    [/event]
+
+    # Dusk - Sir Gerrick suggests that you should hold the north banks of the river.
+
+#ifdef EASY
+    [event]
+        name=turn 3
+
+        [if]
+            [have_unit]
+                id=Sir Gerrick
+            [/have_unit]
+            [then]
+                [message]
+                    speaker=Sir Gerrick
+                    message= _ "Bandits are most dangerous at night, Sir Deoran. Let us hold the north bank of the river until dawn and press our attack in the morning!"
+                [/message]
+
+                [message]
+                    speaker=narrator
+                    image=misc/time-schedules/default/schedule-firstwatch.png
+                    message= _ "All of your units are <i>lawful</i>. This means that they receive a combat bonus during the day and a penalty at night. Urza Mathin’s units are all <i>chaotic</i>, which means that they receive a bonus at night and a penalty during the day. You will be much more effective fighting during the day."
+                [/message]
+            [/then]
+        [/if]
+    [/event]
+#endif
+
+    # Dawn - Sir Gerrick suggests that you should attack now!
+
+    [event]
+        name=turn 6
+
+        [if]
+            [have_unit]
+                id=Sir Gerrick
+            [/have_unit]
+            [then]
+                [message]
+                    speaker=Sir Gerrick
+                    message= _ "The dawn breaks — now is the time for us to attack and drive these bandits from our lands. To me, men of the South Guard!"
+                [/message]
+            [/then]
+        [/if]
+        [message]
+            speaker=Urza Mathin
+            message= _ "Curses! They actually managed to survive the night! I must hold out until my brothers send more men my way."
+        [/message]
+
+#ifdef EASY
+        [message]
+            speaker=narrator
+            image=misc/time-schedules/default/schedule-dawn.png
+            message= _ "During the day, your units will deal more damage and the bandits will deal less. The more of Urza Mathin's troops you can defeat during the day, the better."
+        [/message]
+#endif
+    [/event]
+
     # Village Ambush - You find something unexpected in one of the villages.
 
     [event]
         name=moveto
         [filter]
             side=1
-            x,y=15,12
+            x,y=11,12
         [/filter]
 
 #ifdef EASY
@@ -541,7 +548,7 @@
             type=Longbowman
             id=Aleron
             name= _ "Aleron"
-            x,y=16,12
+            x,y=12,12
             [modifications]
                 {TRAIT_LOYAL}
                 {TRAIT_QUICK}
@@ -578,7 +585,7 @@
             type=Peasant
             id=Aleron
             name= _ "Aleron"
-            x,y=16,12
+            x,y=12,12
             [modifications]
                 {TRAIT_LOYAL}
                 {TRAIT_STRONG}
@@ -607,12 +614,12 @@
             random_traits=yes
             id=Glasar
             name= _ "Glasar"
-            x,y=16,12
+            x,y=12,12
         [/unit]
 
         [message]
             speaker=Glasar
-            message= _ "This village is ours to plunder! Leave now or die by my hand!"
+            message= _ "This village is ours to plunder! Leave now or perish!"
         [/message]
         [message]
             speaker=unit
@@ -626,7 +633,7 @@
 #ifdef EASY
 
     [event]
-        name=turn 5
+        name=turn 4
         [if]
             [not]
                 [have_unit]
@@ -634,7 +641,7 @@
                 [/have_unit]
             [/not]
             [then]
-                {HIGHLIGHT_IMAGE 13 10 items/gohere.png ()}
+                {HIGHLIGHT_IMAGE 9 10 items/gohere.png ()}
 
                 [message]
                     speaker=narrator
@@ -659,7 +666,7 @@
     [/event]
 
     [event]
-        name=turn 18
+        name=turn 12
         [if]
             [variable]
                 name=leader_attacked
@@ -685,6 +692,26 @@
     [/event]
 #endif
 
+    [event]
+        name=time over
+
+        {GENERIC_UNIT 2 (Thug) 14 18}
+        {GENERIC_UNIT 2 (Footpad) 15 20}
+        {GENERIC_UNIT 2 (Thug) 14 19}
+        {GENERIC_UNIT 2 (Poacher) 16 18}
+
+        [message]
+            speaker=Urza Mathin
+            message= _ "Reinforcements from my brothers! Excellent. Let us go and crush this vermin boy who fancies himself a knight. These lands belong to the brothers Urza!"
+        [/message]
+        [message]
+            speaker=Deoran
+            message= _ "There are too many of them! I have no choice but to abandon the villagers here and retreat..."
+        [/message]
+    [/event]
+
+
+
     # Victory - The bandits are defeated.
 
     [event]
@@ -695,7 +722,7 @@
 
         [message]
             speaker=Urza Mathin
-            message= _ "Ack, my days of pillage and plunder are over! Avenge me, my brothers..."
+            message= _ "My days of pillage and plunder are over! Avenge me, my brothers..."
         [/message]
 
         [kill]
