TSG S1: changed scenario music

--- a/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
@@ -5,7 +5,8 @@
     name= _ "Born to the Banner"
     next_scenario=02_Proven_by_the_Sword
 
-    {SCENARIO_MUSIC breaking_the_chains.ogg}
+    {SCENARIO_MUSIC loyalists.ogg}
+    {EXTRA_SCENARIO_MUSIC battle.ogg}
     {EXTRA_SCENARIO_MUSIC knolls.ogg}
 
     map_data="{campaigns/The_South_Guard/maps/01_Born_to_the_Banner.map}"
