TSG S3: gameplay update

--- a/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
@@ -6,7 +6,8 @@
     next_scenario=04_Vale_of_Tears
 
     {SCENARIO_MUSIC wanderer.ogg}
-    {EXTRA_SCENARIO_MUSIC breaking_the_chains.ogg}
+    {EXTRA_SCENARIO_MUSIC traveling_minstrels.ogg}
+    {EXTRA_SCENARIO_MUSIC legends_of_the_north.ogg}
 
     map_data="{campaigns/The_South_Guard/maps/03_A_Desperate_Errand.map}"
 
@@ -20,7 +21,7 @@
     {AFTERNOON}
 
     victory_when_enemies_defeated=no
-    {TURNS 30 24 20}
+    {TURNS 23 19 15}
 
     {TSG_BIGMAP {JOURNEY_03_NEW} }
 
@@ -39,14 +40,10 @@
         controller=human
         {CUSTOM_SG_FLAG}
 
-        {GOLD 120 105 75}
+        {GOLD 100 85 70}
 
         canrecruit=yes
         recruit=Bowman, Spearman
-
-        [village]
-            x,y=40,32
-        [/village]
     [/side]
 
     {STARTING_VILLAGES 1 4}
@@ -81,13 +78,13 @@
             [goal]
                 name=protect_location
                 [criteria]
-                    x,y=28,16
+                    x,y=22,16
                 [/criteria]
                 protect_radius=10
                 value=5.0
             [/goal]
             [avoid]
-                x,y=1-24,1-9
+                x,y=1-24,1-11
             [/avoid]
             [aspect]
                 id=recruitment_instructions
@@ -144,8 +141,8 @@
         {FLAG_VARIANT6 ragged}
     [/side]
 
-    {STARTING_VILLAGES_AREA 2 28 21 5}
-    {STARTING_VILLAGES_AREA 2 12 27 10}
+    {STARTING_VILLAGES_AREA 2 18 25 10}
+    {STARTING_VILLAGES_AREA 2 20 17 8}
 
     # The Aethenwood Elves
 
@@ -191,11 +188,6 @@
                 id=Deoran
             [/filter_second]
         [/micro_ai]
-
-        # Reduce the size of the enemy camp on 'trivial' difficulty
-#ifdef EASY
-        {MODIFY_TERRAIN Gg 16 21}
-#endif
     [/event]
 
     #start
@@ -244,7 +236,7 @@
             message= _ "I have lost two brothers to this mite of a boy! This Deoran, young as he seems, may be more capable than I had thought. No matter. I will use my new powers against him and then surely he will fall!"
         [/message]
 
-        {HIGHLIGHT_IMAGE 17 7 items/gohere.png ()}
+        {HIGHLIGHT_IMAGE 11 7 items/gohere.png ()}
 
 #ifdef EASY
         [message]
@@ -261,7 +253,7 @@
         [objectives]
             side=1
             [objective]
-                description= _ "Move Deoran to the elvish city in the northern woods"
+                description= _ "Move Deoran to the Elvish city in the western woods"
                 condition=win
             [/objective]
             [objective]
@@ -302,9 +294,8 @@
             side=1
             id=Jarek
             name= _ "Jarek"
-            {QUANTITY type Cavalier Dragoon Cavalryman}
-            x,y=41,33
-            facing=sw
+            {QUANTITY type Dragoon Dragoon Cavalryman}
+            x,y=42,19
             [modifications]
                 {TRAIT_LOYAL}
                 {TRAIT_QUICK}
@@ -381,19 +372,19 @@
         name=moveto
         [filter]
             id=Deoran
-            x,y=17,7
+            x,y=11,7
         [/filter]
 
         [remove_item]
-            x,y=17,7
+            x,y=11,7
         [/remove_item]
 
-        {NAMED_LOYAL_UNIT 3 (Elvish Ranger) 15 4 (Linderion) (_"Linderion")}
-        {NAMED_LOYAL_UNIT 3 (Elvish Marksman) 19 4 (Mithalwe) (_"Mithalwe")}
-        {NAMED_LOYAL_UNIT 3 (Elvish Ranger) 13 7 (Sidaurios) (_"Sidaurios")}
-        {NAMED_LOYAL_UNIT 3 (Elvish Avenger) 21 7 (Eltenmir) (_"Eltenmir")}
-        {NAMED_LOYAL_UNIT 3 (Elvish Hero) 15 10 (Vardanos) (_"Vardanos")}
-        {NAMED_LOYAL_UNIT 3 (Elvish Outrider) 19 10 (Talchar) (_"Talchar")}
+        {NAMED_LOYAL_UNIT 3 (Elvish Ranger) 9 4 (Linderion) (_"Linderion")}
+        {NAMED_LOYAL_UNIT 3 (Elvish Marksman) 13 4 (Mithalwe) (_"Mithalwe")}
+        {NAMED_LOYAL_UNIT 3 (Elvish Ranger) 7 7 (Sidaurios) (_"Sidaurios")}
+        {NAMED_LOYAL_UNIT 3 (Elvish Avenger) 15 7 (Eltenmir) (_"Eltenmir")}
+        {NAMED_LOYAL_UNIT 3 (Elvish Hero) 9 10 (Vardanos) (_"Vardanos")}
+        {NAMED_LOYAL_UNIT 3 (Elvish Outrider) 13 10 (Talchar) (_"Talchar")}
         [modify_unit]
             [filter]
                 side=3
@@ -406,7 +397,7 @@
 
         [recall]
             id=Ethiliel
-            x,y=18,6
+            x,y=11,6
             show=no
         [/recall]
 
@@ -562,5 +553,26 @@
             variable=EthilielV
         [/unstore_unit]
         {CLEAR_VARIABLE EthilielV}
+    [/event]
+
+    [event]
+        name=time over
+
+        [unit]
+            type=Death Knight
+            side=2
+            x,y=40,19
+            canrecruit=yes
+            animate=yes
+            facing=nw
+        [/unit]
+        {GENERIC_UNIT 2 (Revenant) 40 20}
+        {GENERIC_UNIT 2 (Skeleton) 41 20}
+        {GENERIC_UNIT 2 (Skeleton Archer) 41 19}
+        {GENERIC_UNIT 2 (Skeleton Archer) 42 19}
+        [message]
+            speaker=Deoran
+            message= _ "Skeletons approach from the east! This can only mean that they have begun to attack Kerlath. We will have to return and fight them without the aid of the elves..."
+        [/message]
     [/event]
 [/scenario]
