TSG S2: added scenario music

--- a/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
@@ -5,8 +5,9 @@
     name= _ "Proven by the Sword"
     next_scenario=03_A_Desperate_Errand
 
-    {SCENARIO_MUSIC battle.ogg}
+    {SCENARIO_MUSIC breaking_the_chains.ogg}
     {EXTRA_SCENARIO_MUSIC the_city_falls.ogg}
+    {EXTRA_SCENARIO_MUSIC casualties_of_war.ogg}
 
     map_data="{campaigns/The_South_Guard/maps/02_Proven_by_the_Sword.map}"
 
@@ -580,7 +581,6 @@
         [/if]
     [/event]
 
->>>>>>> TSG S2: updated gameplay
     # The undead attack!
 
     [event]
