Fix rare bug in FORCE_CHANCE_TO_HIT
If in attack end in FORCE_CHANCE_TO_HIT macro, unit or second unit doesn't exist anymore because rare case where unit disapear before attack end event was calledthen we have an error message like "Invalid WML found: [unstore_unit]: variable 'second_unit' doesn't exist" because presence of unit not condition of execution of event.

--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -578,6 +578,12 @@
             name=attack end
             delayed_variable_substitution=yes
 
+            [filter_condition]
+                [have_unit]
+                    id=$unit.id
+                [/have_unit]
+            [/filter_condition]
+
             [foreach]
                 array=unit.attack
                 [do]
@@ -664,6 +670,12 @@
         [event]
             name=attack end
             delayed_variable_substitution=yes
+
+            [filter_condition]
+                [have_unit]
+                    id=$second_unit.id
+                [/have_unit]
+            [/filter_condition]
 
             [foreach]
                 array=second_unit.attack
