--- a/data/campaigns/Delfadors_Memoirs/utils/sides.cfg
+++ b/data/campaigns/Delfadors_Memoirs/utils/sides.cfg
@@ -425,11 +425,12 @@
     # Delfador regains the ability to recruit L1 elves through Kalenz
     # This is mostly for storyline purpose, as Delfador will almost
     # certainly already have better units for this sort of battle.
+    # Not allowing Kalenz's veterans or ability to recruit L2s, so
+    # the player has more motivation to use the ghosts they have.
     [allow_recruit]
         side=1
         type={ELVES}
     [/allow_recruit]
-    # FIXME: Should side 1 get Kalenz's veterans or ability to recruit L2s?
 #enddef
 
 # Also at the beginning of Showdown in the Northern Swamp (19),
