TSG S4: gameplay update

--- a/data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg
@@ -7,6 +7,7 @@
 
     {SCENARIO_MUSIC elvish-theme.ogg}
     {EXTRA_SCENARIO_MUSIC knolls.ogg}
+    {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
 
     map_data="{campaigns/The_South_Guard/maps/04_Vale_of_Tears.map}"
 
@@ -14,7 +15,7 @@
 
     {DEFAULT_SCHEDULE}
 
-    {TURNS 40 32 28}
+    {TURNS 32 28 24}
     victory_when_enemies_defeated=no
 
     {TSG_BIGMAP {JOURNEY_04_NEW} }
@@ -34,25 +35,11 @@
         controller=human
         {CUSTOM_SG_FLAG}
 
-        {GOLD 150 125 80}
+        {GOLD 120 110 100}
 
         canrecruit=yes
         recruit=Bowman, Spearman, Cavalryman
-
-        [village]
-            x,y=3,10
-        [/village]
-
-        [village]
-            x,y=4,13
-        [/village]
-
-        [village]
-            x,y=8,15
-        [/village]
     [/side]
-
-    {STARTING_VILLAGES 1 5}
 
     # The Undead Hordes
 
@@ -66,13 +53,14 @@
         advances_to=Necromancer
 #endif
 #ifdef HARD
-        type=Necromancer
+        type=Dark Sorcerer
+        advances_to=Necromancer
 #endif
         id="Mal A'kai"
         name= _ "Mal A’kai"
         facing=sw
 
-        {GOLD 70 90 120}
+        {GOLD 70 85 100}
 
         team_name=undead
         user_team_name=_"Undead"
@@ -109,6 +97,9 @@
 
     {STARTING_VILLAGES 2 14}
 
+    # do this here since these circles overlap, we want side 2 to have most of the villages and side 1 to have fewer
+    {STARTING_VILLAGES 1 5}
+
     # The Bandit Army
 
     [side]
@@ -118,7 +109,7 @@
         name= _ "Jera Ilras"
         facing=sw
 
-        {GOLD 30 40 80}
+        {GOLD 40 55 70}
 
         team_name=undead
         user_team_name=_"Bandits"
@@ -141,7 +132,7 @@
                 value=2
             [/goal]
             [avoid]
-                x,y=27-35,29-35
+                x,y=21-29,25-32
             [/avoid]
         [/ai]
 #ifdef EASY
@@ -227,7 +218,7 @@
             message= _ "This is the Vale of Blossoming Trees. Our great sages come here to find peace and enlightenment. Some other elves also live nearby — mostly artisans inspired by the tranquility of this valley."
         [/message]
 
-        {HIGHLIGHT_IMAGE 31 32 items/gohere.png ()}
+        {HIGHLIGHT_IMAGE 25 28 items/gohere.png ()}
 
         [message]
             speaker=Sir Gerrick
@@ -414,7 +405,7 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "You shall not die in vain! My bodyguard will avenge you!"
+            message= _ "You shall not die in vain! My bodyguards will avenge you!"
         [/message]
 
         [fire_event]
@@ -429,12 +420,12 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "You have a bodyguard?!"
+            message= _ "You have bodyguards?!"
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "You have a bodyguard?!"
+            message= _ "You have bodyguards?!"
         [/message]
 
 #ifdef EASY
@@ -621,17 +612,17 @@
         [/if]
     [/event]
 
-    # Ethieliel arrives at Mebrin’s village
+    # Ethiliel arrives at Mebrin’s village
 
     [event]
         name=moveto
         [filter]
             id=Ethiliel
-            x,y=31,32
+            x,y=25,28
         [/filter]
 
         [remove_item]
-            x,y=31,32
+            x,y=25,28
         [/remove_item]
 
         [message]
@@ -683,7 +674,7 @@
 
         [message]
             speaker=Deoran
-            message= _ "... Ethiliel? I know you must be distraught, but-"
+            message= _ "... Ethiliel? I know you must be distraught, but—"
         [/message]
 
         [message]
@@ -723,6 +714,30 @@
     [/event]
 
     [event]
+        name=time over
+
+        [unit]
+            type=Necromancer
+            side=2
+            x,y=24,28
+            canrecruit=yes
+            id=Necro
+            animate=yes
+            facing=nw
+        [/unit]
+        {GENERIC_UNIT 2 (Revenant) 26 27}
+        {GENERIC_UNIT 2 (Deathblade) 25 29}
+        [message]
+            speaker=Necro
+            message= _ "So the elves finally come to defend their valley. Pity, they showed up a little late. We will stop them here and prevent them from reclaiming the knowledge that was once theirs!"
+        [/message]
+        [message]
+            speaker=Deoran
+            message= _ "They have reached Mebrin's village before us! We have no hope of obtaining his aid now..."
+        [/message]
+    [/event]
+
+    [event]
         name=victory
 
         [if]
@@ -733,7 +748,7 @@
             [then]
                 [message]
                     speaker=Ethiliel
-                    message= _ "Come, my bodyguard! We must make haste to follow this trail and find Mebrin."
+                    message= _ "Come, my bodyguards! We must make haste to follow this trail and find Mebrin."
                 [/message]
 
                 [fire_event]
