fixup! HttT S6: Point out exactly where the ford is.

--- a/data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg
@@ -502,7 +502,11 @@
                 [remove_item]
                     x,y=6,32
                 [/remove_item]
-                {REMOVE_LABEL 6 32}
+                [label]
+                    x,y=6,32
+                    text="" # wmllint: ignore
+                    team_name=elves
+                [/label]
                 [scroll_to]
                     x,y=6,32
                 [/scroll_to]
