TSG S5: gameplay update

--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -3,12 +3,12 @@
     id=05_Choice_in_the_Fog
 
     name= _ "Choice in the Fog"
-    next_scenario=06a_Tidings_Good_and_Ill
+    next_scenario=07a_Into_the_Depths
 
     {SCENARIO_MUSIC the_deep_path.ogg}
-    {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
-
-    # music changes when bandits are encountered
+    {EXTRA_SCENARIO_MUSIC suspense.ogg}
+    {EXTRA_SCENARIO_MUSIC northerners.ogg}
+    {EXTRA_SCENARIO_MUSIC heroes_rite.ogg}
 
     map_data="{campaigns/The_South_Guard/maps/05_Choice_in_the_Fog.map}"
 
@@ -20,7 +20,7 @@
     {TSG_BIGMAP {JOURNEY_05_NEW} }
 
     victory_when_enemies_defeated=yes
-    {TURNS 50 40 35}
+    {TURNS 46 40 35}
 
     [side]
         side=1
@@ -29,26 +29,22 @@
         name= _ "Deoran"
         profile=portraits/deoran.png
         unrenamable=yes
-
         team_name=South_Guard
         user_team_name=_"South Guard"
         controller=human
+
         {CUSTOM_SG_FLAG}
 
-        {GOLD 150 125 80}
-        {INCOME 6 4 2}
+        {GOLD 120 110 100}
+        {INCOME 2 1 0}
 
-#ifdef EASY
-        fog=yes
-        shroud=no
-#else
         fog=yes
         shroud=yes
-#endif
-
         canrecruit=yes
         recruit=Bowman, Spearman, Cavalryman, Elvish Shaman, Elvish Fighter
     [/side]
+
+    {STARTING_VILLAGES 1 8}
 
     # The Bandit Armies
 
@@ -60,8 +56,9 @@
         unrenamable=yes
         profile=portraits/urza-afalas-masked.png
 
-        {GOLD 50 70 90}
-        {INCOME 2 3 5}
+        # activate side 2 a little late so it doesn't fight side 3 too much
+        gold=0
+        {INCOME 4 5 6}
 
         team_name=bandits
         user_team_name=_"Bandits"
@@ -79,9 +76,11 @@
                 radius=9
             [/avoid]
         [/ai]
-        recruit=Footpad, Thug
+        recruit=Footpad, Thug, Poacher
         {FLAG_VARIANT6 ragged}
     [/side]
+
+    {STARTING_VILLAGES 2 7}
 
     # The Undead Hordes
 
@@ -92,24 +91,22 @@
         name= _ "Gruth"
         canrecruit=yes
         overlays="misc/leader-expendable.png"
-        facing=se
 
         team_name=undead
         user_team_name=_"Undead"
         controller=ai
 
-        {GOLD 30 50 80}
-        {INCOME 5 10 15}
+        {GOLD 60 70 80}
+        {INCOME 9 12 15}
 
         # Second leader:
         [unit]
             type=Soulless
             id=Gerd
-            name=_ "Gerd"
+            name=_ "Gerd"
             canrecruit=yes
             overlays="misc/leader-expendable.png"
-            facing=ne
-            x,y=21,38
+            x,y=11,26
         [/unit]
         [ai]
             recruitment_pattern=fighter
@@ -129,6 +126,8 @@
         {FLAG_VARIANT undead}
     [/side]
 
+    {STARTING_VILLAGES 3 8}
+
     # The Undead Hordes
 
     [side]
@@ -137,14 +136,14 @@
         id="Mal M'Brin"
         name= _ "?"
         profile=portraits/mal-mbrin.png
-        facing=sw
 
         team_name=undead
         user_team_name=_"Undead"
         controller=ai
 
-        {GOLD 60 90 120}
-        {INCOME 3 5 6}
+        # side 4 starts with no gold just in case it tries to kill the bandits and also to avoid having you fight through so many units in the forests, then have no enemies when you reach the lich
+        gold=0
+        {INCOME 5 8 11}
 
         canrecruit=yes
 
@@ -185,6 +184,28 @@
 #endif
         {FLAG_VARIANT undead}
     [/side]
+
+    {STARTING_VILLAGES 4 15}
+
+    [side]
+        no_leader=yes
+        side=5
+        controller=ai
+        team_name=monsters
+        hidden=yes
+        color=black
+        defeat_condition=always
+    [/side]
+
+    [event]
+        name=prestart
+
+        [modify_side]
+            side=1
+            fog=yes
+            shroud=yes
+        [/modify_side]
+    [/event]
 
     # Scenario Start
     [event]
@@ -258,7 +279,7 @@
         [message]
             speaker=narrator
             image="units/elves-wood/fighter-melee-2.png~RC(magenta>red)"
-            message= _ "You may now recruit Elvish Fighters. Elvish Fighters are mixed fighters who skillfully wield both a sword and a bow. They are fast warriors and especially effective in forest."
+            message= _ "You may now recruit Elvish Fighters. Elvish Fighters are mixed fighters who skillfully wield both a sword and a bow. They are fast warriors and especially effective in forests."
         [/message]
         [message]
             speaker=narrator
@@ -512,6 +533,16 @@
         [/if]
     [/event]
 
+    # Activate side 2 on turn 3
+    [event]
+        name=turn 3
+
+        [gold]
+            side=2
+            {QUANTITY amount 80 95 110}
+        [/gold]
+    [/event]
+
     # The adventurers see the Lich, or the Lich moves in their vision area
     [event]
         name=sighted
@@ -532,6 +563,13 @@
             scroll=no
             message= _ "We found the lich!"
         [/message]
+
+        # give side 4 some more gold
+        [gold]
+            side=4
+            {QUANTITY amount 70 85 100}
+        [/gold]
+
         {VARIABLE know_about_lich yes}
     [/event]
 
@@ -544,8 +582,8 @@
         [/filter]
         [filter_condition]
             [have_location]
-                x=39-40,41
-                y=20-21,21
+                x=28,28,29,29,30
+                y=14,15,15,16,15
                 [filter_vision]
                     side=1
                 [/filter_vision]
@@ -708,16 +746,6 @@
                     [option]
                         label= _ "Your crimes are too great. You will fall with the foul undead!"
                         [command]
-                            [music]
-                                name=knolls.ogg
-                                immediate=no
-                                append=no
-                            [/music]
-                            [music]
-                                name=nunc_dimittis.ogg
-                                append=yes
-                            [/music]
-
                             [message]
                                 speaker=Urza Afalas
                                 message= _ "Then this parley is over! You may have caused the doom of all of us!"
@@ -735,18 +763,18 @@
                             [/set_variable]
 
                             [show_objectives][/show_objectives]
+
+                            # give side 4 some gold
+                            [gold]
+                                side=4
+                                {QUANTITY amount 70 85 100}
+                            [/gold]
                         [/command]
                     [/option]
 
                     [option]
                         label= _ "Very well. All men must unite against the undead."
                         [command]
-                            [music]
-                                name=knalgan_theme.ogg
-                                immediate=no
-                                append=yes
-                            [/music]
-
                             [store_villages]
                                 owner_side=2
 
@@ -842,6 +870,12 @@
                             [/modify_side]
 
                             [show_objectives][/show_objectives]
+
+                            # give side 4 some gold
+                            [gold]
+                                side=4
+                                {QUANTITY amount 40 50 60}
+                            [/gold]
                         [/command]
                     [/option]
                 [/message]
@@ -907,21 +941,92 @@
         name=moveto
         [filter]
             side=1
-            x,y=16,39
+            x,y=6,26
         [/filter]
 
         [unit]
-            side=3
+            side=5
             type=Water Serpent
             id=Beast of the Lake
             name= _ "Beast of the Lake"
-            x,y=15,39
+            x,y=2,25
             upkeep=loyal
+            [status]
+                slowed=yes
+            [/status]
         [/unit]
 
         [message]
             speaker=Beast of the Lake
             message= _ "Graar!" # wmllint: no spellcheck
+        [/message]
+    [/event]
+
+    # time over events
+
+    [event]
+        name=turn 30
+
+        [sound]
+            name=magic-dark-big.ogg
+        [/sound]
+
+        [message]
+            speaker=Deoran
+            message= _ "Ouch! Did anyone feel that?"
+        [/message]
+        [message]
+            speaker=Sir Gerrick
+            message= _ "Aye, I felt it too. A dreadful chill of perverse origin."
+        [/message]
+        [message]
+            speaker=Ethiliel
+            message= _ "It is the work of the undead. They have begun to cast a spell on us to drain our energy and trap us in these forests. We must hurry before they complete their dark magic, or we will not be able to escape this harrowing place, much less find and defeat them."
+        [/message]
+    [/event]
+    [event]
+        name=turn 35
+
+        [sound]
+            name=magic-dark-big.ogg
+        [/sound]
+
+        [message]
+            speaker=Minister Hylas
+            message= _ "Foul magic pervades these forests."
+        [/message]
+        [message]
+            speaker=Ethiliel
+            message= _ "The spell grows stronger by the moment."
+        [/message]
+    [/event]
+    [event]
+        name=turn 40
+
+        [sound]
+            name=magic-dark-big.ogg
+        [/sound]
+
+        [message]
+            speaker=Deoran
+            message= _ "The darkness is so heavy... I do not know how much longer I can go on..."
+        [/message]
+    [/event]
+    [event]
+        name=time over
+
+        [sound]
+            name=magic-dark-big.ogg
+            repeat=1
+        [/sound]
+
+        [message]
+            speaker=Deoran
+            message= _ "It is... so cold..."
+        [/message]
+        [message]
+            speaker=Ethiliel
+            message= _ "The undead have ensnared us in their spell... we will not be able to escape now..."
         [/message]
     [/event]
 
@@ -1066,45 +1171,16 @@
         [/message]
         [message]
             speaker=Ethiliel
-            message= _ "There are strong magical wards that have hidden the way and bar our entry, but I am capable of dispelling them. However, there is still the matter of the other undead — there are sure to be more in this forest that we have not found yet."
-        [/message]
-        [message]
-            speaker=Sir Gerrick
-            message= _ "Then someone must take news back to Wesnoth of this new evil that lurks near our borders. It will be difficult for us to defeat all of the undead on our own. I will go, if you concur, Deoran."
+            message= _ "There are strong magical wards that have hidden the way and bar our entry, but I am capable of dispelling them. It will take some time so stand back and get what rest you can. We are likely to face fierce opposition once we enter the caverns."
         [/message]
         [message]
             speaker=Deoran
-            message= _ "I agree with you, but you will need help finding the way back. Ethiliel, would it be possible to send a few of your elves to accompany Sir Gerrick?"
-        [/message]
-        [message]
-            speaker=Ethiliel
-            message= _ "Yes, my kinsfolk will protect you and your message."
-        [/message]
-        [if]
-            [variable]
-                name=has_mermen
-                boolean_equals=yes
-            [/variable]
-            [then]
-                [message]
-                    speaker=Ethiliel
-                    # po: By "mer followers" the mermen are meant.
-                    message= _ "Your mer followers had best join Sir Gerrick, as well, Deoran. They may prove far more useful in the rivers and swamps to the north than in the caverns which lie ahead."
-                [/message]
-                [message]
-                    speaker=Deoran
-                    message= _ "Very well. I will release them to aid Sir Gerrick, and then to return to their homes."
-                [/message]
-            [/then]
-        [/if]
-        [message]
-            speaker=Sir Gerrick
-            message= _ "Fight well against the evil undead, Deoran! I will be there to greet you when you return to Kerlath."
+            message= _ "Indeed. We will leave you to your work and prepare ourselves for the coming battle."
         [/message]
         {CLEAR_VARIABLE side_with_bandits,found_urza_afalas,know_about_lich}
         [endlevel]
             result=victory
-            next_scenario=06a_Tidings_Good_and_Ill
+            next_scenario=07a_Into_the_Depths
             bonus=yes
             {NEW_GOLD_CARRYOVER 40}
         [/endlevel]
